@@ -63,6 +63,7 @@ lib/rucola/rucola_support/models/rc_document.rb
 lib/rucola/rucola_support/notifications.rb
 lib/rucola/rucola_support/notifications/notifications.rb
 lib/rucola/rucola_support/rc_app.rb
+lib/rucola/tasks/dependencies.rake
 lib/rucola/tasks/freeze.rake
 lib/rucola/tasks/interface_builder.rake
 lib/rucola/tasks/main.rake
